--- a/lamp_ubuntu1804/vars/default.yml
+++ b/lamp_ubuntu1804/vars/default.yml
@@ -1,7 +1,7 @@
 ---
 mysql_root_password: "mysql_root_password"
-app_user: "sammy"
+app_user: "naga"
 http_host: "your_domain"
 http_conf: "your_domain.conf"
-http_port: "80"
+http_port: "83"
 disable_default: true
